Final working game html, css, JS

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <link href="https://fonts.googleapis.com/css?family=Acme|Indie+Flower|Play" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body onload="startGame();">
+<body>
  
  <h1>My Tic-Tac-Toe Game</h1>  
-<div id="message">This is where the message will go</div>
+<div id="message"></div>
 
     <table border="1">
         <tr>
-            <td class="square" onclick="nextMove(this)"></td>
-            <td class="square" onclick="nextMove(this)"></td>
-            <td class="square" onclick="nextMove(this)"></td>
+            <td class="square" id="s1" onclick="nextMove(this)"></td>
+            <td class="square" id="s2" onclick="nextMove(this)"></td>
+            <td class="square" id="s3" onclick="nextMove(this)"></td>
         </tr>
         <tr>
-            <td class="square" onclick="nextMove(this)"></td>
-            <td class="square" onclick="nextMove(this)"></td>
-            <td class="square" onclick="nextMove(this)"></td>
+            <td class="square" id="s4" onclick="nextMove(this)"></td>
+            <td class="square" id="s5" onclick="nextMove(this)"></td>
+            <td class="square" id="s6" onclick="nextMove(this)"></td>
         </tr>
         <tr>
-            <td class="square" onclick="nextMove(this)"></td>
-            <td class="square" onclick="nextMove(this)"></td>
-            <td class="square" onclick="nextMove(this)"></td>
+            <td class="square" id="s7" onclick="nextMove(this)"></td>
+            <td class="square" id="s8" onclick="nextMove(this)"></td>
+            <td class="square" id="s9" onclick="nextMove(this)"></td>
         </tr>
     </table>
-
+<a href = "javascript: startGame();" id="restart">Start New Game</a>
 
 <script src="js/main.js"></script>
 </body>
