Final rough draft, almost ready to turn in.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <td class="square" id="s9" onclick="nextMove(this)"></td>
         </tr>
     </table>
-<a href = "javascript: startGame();" id="restart">Start New Game</a>
+<button id="restart" onclick="startGame();">Start New Game</button>
 
 <script src="js/main.js"></script>
 </body>
